--- a/src/styles/Botao.module.css
+++ b/src/styles/Botao.module.css
@@ -1,7 +1,8 @@
 .botao {  
   background-color: crimson;
   padding: 5px;
-  color: black;
+  color: rgb(255, 255, 255);
   border-radius: 6px;
+  box-shadow: 0px 0px 26px 0px #ff0073;
   
 }
