--- a/src/styles/Botao.module.css
+++ b/src/styles/Botao.module.css
@@ -1,8 +1,9 @@
 .botao {  
-  background-color: crimson;
+  margin-top: 25px;
+  background-color: rgb(7, 92, 25);
   padding: 5px;
   color: rgb(255, 255, 255);
   border-radius: 6px;
-  box-shadow: 0px 0px 26px 0px #ff0073;
+  box-shadow: 0px 0px 26px 0px #25f113;
   
 }
