--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,6 +1,16 @@
 .container {
-  margin: 0 20%;
-  
+  top: 0;
+  margin: 0;
+  background: rgb(255, 0, 0);
+  background: linear-gradient(86deg, rgba(255, 0, 0, 1) 25%, rgba(172, 168, 8, 1) 67%, rgba(255, 255, 255, 1) 100%);
 }
 
+.content {
+  padding-top: 30px;
+  margin: 0 20%;
 
+}
+
+.paradaDeMao {
+  margin-left: 30px;
+}
