Colocando símbolo do Mãe África na headline

--- a/src/styles/Botao.module.css
+++ b/src/styles/Botao.module.css
@@ -1,9 +1,25 @@
-.botao {  
+.botao {
+  display: flex;
   margin-top: 25px;
   background-color: rgb(7, 92, 25);
   padding: 5px;
   color: rgb(255, 255, 255);
   border-radius: 6px;
+  display: flex;
   box-shadow: 0px 0px 26px 0px #25f113;
-  
+  align-items: center;
+  justify-content: center;
+  border: 1px solid red;  
+  width: 200px;
+}
+
+
+@media screen and (max-width: 768px) {
+  .botao {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 15px 10px;
+    text-align: center;
+  }
 }
