--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,16 +1,37 @@
+.logo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
 .container {
   top: 0;
   margin: 0;
-  background: rgb(255, 0, 0);
-  background: linear-gradient(86deg, rgba(255, 0, 0, 1) 25%, rgba(172, 168, 8, 1) 67%, rgba(255, 255, 255, 1) 100%);
+  background-color: rgb(53, 50, 58);
 }
 
 .content {
   padding-top: 30px;
   margin: 0 20%;
-
+  text-align: center;
 }
 
 .paradaDeMao {
   margin-left: 30px;
+}
+
+.headline { 
+  text-align: center;
+  text-shadow: 0px 26px 26px 15px black;
+
+}
+
+
+@media (max-width: 786px) {
+  .content {
+    padding-top: 30px;
+    margin: 0 10px;
+  }
 }
