--- a/src/styles/Botao.module.css
+++ b/src/styles/Botao.module.css
@@ -1,13 +1,10 @@
 .botao {
   margin-top: 25px;
-  background-color: rgb(7, 92, 25);
+  background-color: #075c1a; /* updated color value */
   padding: 5px;
-  color: rgb(255, 255, 255);
+  color: #fff; /* updated color value */
   border-radius: 6px;
-  box-shadow: 0px 0px 26px 0px #25f113;
-  align-items: center;
-  justify-content: center;
-  width: 200px;
+  box-shadow: 0 0 26px #25f113;
 }
 
 
