--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -5,11 +5,10 @@
   align-items: center;
 }
 
-
 .container {
   top: 0;
   margin: 0;
-  background-color: rgb(53, 50, 58);
+  background-color: rgb(188, 183, 197);
 }
 
 .content {
@@ -25,7 +24,13 @@
 .headline { 
   text-align: center;
   text-shadow: 0px 26px 26px 15px black;
+  font-size: 50px;
+  font-weight: bold;
 
+}
+
+.subtitle {
+  
 }
 
 
